# Project-Youtube-Transcriber

./: .env.example  .gitignore  README.md  lefthook.yml  pyproject.toml
cli/youtube_transcriber/: cli.py  config.py
cli/youtube_transcriber/summarization/: prompts.py  summarizer.py
cli/youtube_transcriber/transcription/: fetcher.py  models.py
extension/: build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
extension/src/: background.ts  content.css  content.ts  options.css  options.html  options.ts  sidepanel.css  sidepanel.html  sidepanel.ts  types.ts
extension/src/lib/: prompts.ts  transcript.ts
