[project]
name = "youtube-transcriber"
version = "0.1.0"
description = "CLI tool to fetch YouTube transcripts and generate concise interview study notes via Claude"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "youtube-transcript-api>=1.0.3",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "lefthook>=1.11.13",
    "poethepoet>=0.34.0",
    "ruff>=0.11.5",
    "ty>=0.0.1a14",
]

[project.scripts]
transcribe = "youtube_transcriber.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/youtube_transcriber"]

[tool.poe.tasks]
transcribe = "uv run transcribe"
lint = "uv run ruff check cli"
format = "uv run ruff format cli"
typecheck = "uv run ty check cli"

[tool.poe.tasks.ext-lint]
cmd = "npm run lint"
cwd = "extension"

[tool.poe.tasks.ext-format]
cmd = "npm run format"
cwd = "extension"

[tool.poe.tasks.ext-typecheck]
cmd = "npm run typecheck"
cwd = "extension"

[tool.poe.tasks.ext-build]
cmd = "npm run build"
cwd = "extension"

[tool.ruff]
target-version = "py313"
